--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a class="menu__item-link">
+                <a class="menu__item-link" href="#surf">
                   <div class="menu__item-img">
                     <img src="img/surf.svg" alt="surf" />
                   </div>
@@ -55,7 +55,7 @@
                 </a>
               </li>
               <li class="menu__item">
-                <a class="menu__item-link">
+                <a class="menu__item-link" href="#travel">
                   <div class="menu__item-img">
                     <img src="img/travel.svg" alt="travel" />
                   </div>
@@ -63,7 +63,7 @@
                 </a>
               </li>
               <li class="menu__item">
-                <a class="menu__item-link">
+                <a class="menu__item-link" href="#sleep">
                   <div class="menu__item-img">
                     <img src="img/camp.svg" alt="sleep" />
                   </div>
@@ -71,7 +71,7 @@
                 </a>
               </li>
               <li class="menu__item">
-                <a class="menu__item-link">
+                <a class="menu__item-link" href="#shop">
                   <div class="menu__item-img">
                     <img src="img/surfboard.svg" alt="shop" />
                   </div>
@@ -595,7 +595,7 @@
             </div>
           </div>
         </section>
-        <section class="travel">
+        <section class="travel" id="travel">
           <div class="container-fluid">
             <div class="travel-inner" style="background-image: url('img/cocktail.png')">
               <div class="title">
@@ -1065,7 +1065,7 @@
             </div>
           </div>
         </section>
-        <section class="sleep">
+        <section class="sleep" id="sleep">
           <div class="container-fluid">
             <div class="sleep-inner" style="background-image: url('img/sleep-flower.png')">
               <div class="title">
@@ -1711,7 +1711,7 @@
             </div>
           </div>
         </section>
-        <section class="shop">
+        <section class="shop" id="shop">
           <div class="container-fluid">
             <div class="shop-inner" style="background-image: url('img/shop-bg.png')">
               <div class="title">
@@ -1900,6 +1900,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/app.min.js?_v=20221209162509"></script>
+    <script src="js/app.min.js?_v=20221210135230"></script>
   </body>
 </html>
