--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
           <div class="header__slider-item slider-item">
             <div class="slider-item__info">
               <div class="slider-item__info-subtitle subtitle-left">Surf</div>
-              <div class="slider-item__info-title">North Shore</div>
+              <div class="slider-item__info-title wow animate__animated animate__fadeInLeft" data-wow-offset="0">North Shore</div>
               <div class="slider-item__info-subtext subtitle-left">Condition</div>
-              <div class="slider-item__info-text info-text">Radical</div>
+              <div class="slider-item__info-text info-text animate__animated animate__fadeInRight" data-wow-offset="0">Radical</div>
               <a class="slider-item__info-link" href="#">
                 <img src="img/arrow-right.svg" alt="arrow" />
               </a>
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="slider-location">
+        <div class="slider-location wow animate__animated animate__fadeInUp" data-wow-offset="0" data-wow-delay="0.5s">
           <div class="slider-location__item">
             <div class="slider-location__item-inner">
               <div class="slider-location__num">01</div>
@@ -173,13 +173,13 @@
       <main class="main">
         <section class="surf" id="surf">
           <div class="container-fluid">
-            <div class="title">
+            <div class="title wow animate__animated animate__fadeInLeft">
               <div class="title__decor">
                 Surf
                 <h3>Surf</h3>
               </div>
             </div>
-            <div class="surf__subtitle">
+            <div class="surf__subtitle wow animate__animated animate__fadeInRight">
               <div class="subtitle">
                 <div class="subtitle-head subtitle-left">Current location</div>
                 <div class="info-text">
@@ -598,7 +598,7 @@
         <section class="travel" id="travel">
           <div class="container-fluid">
             <div class="travel-inner" style="background-image: url('img/cocktail.png')">
-              <div class="title">
+              <div class="title  wow animate__animated animate__fadeInLeft">
                 <div class="title__decor">
                   Travel
                   <h3>Travel</h3>
@@ -607,7 +607,7 @@
               <div class="travel-slider">
                 <div class="travel-slider__item travel-slide">
                   <div class="travel-slide__head" style="background-image: url('img/travel-bg.png')">
-                    <div class="travel-slide__subtitle">
+                    <div class="travel-slide__subtitle wow animate__animated animate__fadeInRight">
                       <div class="subtitle">
                         <div class="subtitle-head subtitle-left">Shore</div>
                         <div class="info-text">
@@ -628,7 +628,7 @@
                     </div>
                   </div>
                   <div class="travel-slide__info">
-                    <div class="travel-slide__info-item">
+                    <div class="travel-slide__info-item wow animate__animated animate__fadeInDown">
                       <div class="travel-slide__info-title">Destination</div>
                       <div class="travel-slide__info-value">
                         Queensland
@@ -636,18 +636,18 @@
                         Australia
                       </div>
                     </div>
-                    <div class="travel-slide__info-item">
+                    <div class="travel-slide__info-item travel-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.3s">
                       <div class="travel-slide__info-title">Distance</div>
                       <div class="travel-slide__info-value">7,065 Miles</div>
                     </div>
-                    <div class="travel-slide__info-item">
+                    <div class="travel-slide__info-item travel-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.6s">
                       <div class="travel-slide__info-title">Travel Time</div>
                       <div class="travel-slide__info-value">
                         <p>23 Hours</p>
                         <p>5 Minutes</p>
                       </div>
                     </div>
-                    <div class="travel-slide__info-item">
+                    <div class="travel-slide__info-item travel-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.9s">
                       <div class="travel-slide__info-title">Pricing</div>
                       <div class="travel-slide__info-value">
                         $1,976 USD
@@ -1068,7 +1068,7 @@
         <section class="sleep" id="sleep">
           <div class="container-fluid">
             <div class="sleep-inner" style="background-image: url('img/sleep-flower.png')">
-              <div class="title">
+              <div class="title wow animate__animated animate__fadeInLeft">
                 <div class="title__decor">
                   Sleep
                   <h3>Sleep</h3>
@@ -1077,7 +1077,7 @@
               <div class="sleep-slider">
                 <div class="sleep-slider__item sleep-slide">
                   <div class="sleep-slide__head" style="background-image: url('img/sleep-bg.png')">
-                    <div class="sleep-slide__subtitle">
+                    <div class="sleep-slide__subtitle wow animate__animated animate__fadeInRight">
                       <div class="subtitle">
                         <div class="subtitle-head subtitle-left">Shore</div>
                         <div class="info-text">
@@ -1112,7 +1112,7 @@
                     </div>
                   </div>
                   <div class="sleep-slide__info">
-                    <div class="sleep-slide__info-item">
+                    <div class="sleep-slide__info-item wow animate__animated animate__fadeInDown">
                       <div class="sleep-slide__info-title">Resort</div>
                       <div class="sleep-slide__info-value">
                         Auberge
@@ -1120,7 +1120,7 @@
                         Australia
                       </div>
                     </div>
-                    <div class="sleep-slide__info-item">
+                    <div class="sleep-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.3s">
                       <div class="sleep-slide__info-title"># of Nights</div>
                       <div class="sleep-slide__info-value">
                         <div class="quantity">
@@ -1129,7 +1129,7 @@
                         Nights
                       </div>
                     </div>
-                    <div class="sleep-slide__info-item">
+                    <div class="sleep-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.6s">
                       <div class="sleep-slide__info-title"># of Guests</div>
                       <div class="sleep-slide__info-value">
                         <div class="quantity">
@@ -1138,7 +1138,7 @@
                         Guests
                       </div>
                     </div>
-                    <div class="sleep-slide__info-item">
+                    <div class="sleep-slide__info-item wow animate__animated animate__fadeInDown" data-wow-delay="0.9s">
                       <div class="sleep-slide__info-title">Pricing</div>
                       <div class="sleep-slide__info-value">
                         <span class="sum" data-nights="55" data-guests="25"></span>
@@ -1714,7 +1714,7 @@
         <section class="shop" id="shop">
           <div class="container-fluid">
             <div class="shop-inner" style="background-image: url('img/shop-bg.png')">
-              <div class="title">
+              <div class="title wow animate__animated animate__fadeInLeft">
                 <div class="title__decor">
                   Shop
                   <h3>Shop</h3>
@@ -1808,7 +1808,7 @@
                       <div class="shop-slide__descr">
                         <div class="descr">
                           <div class="subtitle-head subtitle-right">Style</div>
-                          <div class="info-text">North Nugget TT Surfboard</div>
+                          <div class="info-text">South Nugget GT Surfboard</div>
                           <ul class="star-rating">
                             <li>
                               <img src="img/star.svg" alt="" />
@@ -1900,6 +1900,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/app.min.js?_v=20221210135230"></script>
+    <script src="js/app.min.js?_v=20221210174756"></script>
   </body>
 </html>
